polish training and related chapters

--- a/10_manipulation.Rmd
+++ b/10_manipulation.Rmd
@@ -35,7 +35,7 @@ data(GlobalPatterns, package="mia")
 tse <- GlobalPatterns
 tse <- transformCounts(tse, MARGIN = "samples", method="relabundance")
 
-molten_tse <- meltAssay(tse,
+molten_tse <- mia::meltAssay(tse,
                         add_row_data = TRUE,
                         add_col_data = TRUE,
                         assay_name = "relabundance")
