--- a/20_beta_diversity.Rmd
+++ b/20_beta_diversity.Rmd
@@ -270,7 +270,7 @@ if(!require("knitr")){
     library("knitr")
 }
 # Load data
-data(enterotype)
+data(enterotype, package="mia")
 # Covariates that are being analyzed
 variable_names <- c("ClinicalStatus", "Gender", "Age")
 
@@ -621,7 +621,6 @@ appropriate choice for comparing community compositions.
 
 
 ## Further reading
-
 
  - [How to extract information from clusters](http://bioconductor.org/books/release/OSCA/clustering.html)
 
