--- a/40_machine_learning.Rmd
+++ b/40_machine_learning.Rmd
@@ -28,8 +28,8 @@ labels are not known.
 library(mia)
 
 # Load experimental data
-data(peerj13075)
-(tse <- peerj13075)
+data(peerj13075, package="mia")
+tse <- peerj13075
 ```
 
 Let's first preprocess the data.
@@ -39,9 +39,8 @@ Let's first preprocess the data.
 tse <- agglomerateByRank(tse, rank = "order")
 
 # Apply CLR transform
-assay(tse, "pseudo") <- assay(tse, "counts") + 1
-tse <- transformCounts(tse, assay_name = "pseudo", method = "relabundance")
-tse <- transformCounts(tse, assay_name = "relabundance", method = "clr")
+tse <- transformCounts(tse, assay_name = "counts", method = "clr",
+                       MARGIN="samples", pseudocount=1)
 
 # Get assay
 assay <- assay(tse, "clr")
