--- a/95_resources.Rmd
+++ b/95_resources.Rmd
@@ -1,3 +1,5 @@
+# (PART) Appendix {-}
+
 
 # Resources {#resources}
 
@@ -5,8 +7,6 @@
 library(rebook)
 chapterPreamble()
 ```
-
-
 
 
 ## Data containers
