--- a/04_containers.Rmd
+++ b/04_containers.Rmd
@@ -654,11 +654,12 @@ Conversion is possible between other data formats. Interested readers can refer 
 
 ## Demonstration data {#example-data}
 
-
 Open demonstration data for testing and benchmarking purposes is
 available from multiple locations. This chapter introduces some
 options. The other chapters of this book provide ample examples about
 the use of the data.
+
+
 
 
 ### Package data {#package-data}
@@ -695,12 +696,13 @@ help(GlobalPatterns)
 
 ### ExperimentHub data
 
-[ExperimentHub](https://bioconductor.org/packages/release/bioc/vignettes/ExperimentHub/inst/doc/ExperimentHub.html) 
+[ExperimentHub](https://bioconductor.org/packages/release/bioc/vignettes/ExperimentHub/inst/doc/ExperimentHub.html)
 provides a variety of data resources, including the
-microbiomeDataSets package [@Morgan2021; @microlahti2021].
+[microbiomeDataSets](https://bioconductor.org/packages/release/data/experiment/html/microbiomeDataSets.html)
+package [@Morgan2021; @microlahti2021].
 
-A table of the available data sets is available through the `availableDataSets`
-function.
+A table of the available data sets is available through the
+`availableDataSets` function.
 
 ```{r, message=FALSE}
 library(microbiomeDataSets)
@@ -729,20 +731,18 @@ containers](https://microbiome.github.io/OMA/multitable.html) for more
 details.
 
 
+### Curated metagenomic data
 
-### Other data sources
-
-The curatedMetagenomicData 
-is an independent source that provides various example data sets as
-`(Tree)SummarizedExperiment` objects [@Pasolli2017]. This resource provides curated
-human microbiome data including gene families, marker abundance,
-marker presence, pathway abundance, pathway coverage, and relative
-abundance for samples from different body sites. See the package
-homepage for more details on data availability and access.
+[curatedMetagenomicData](https://bioconductor.org/packages/release/data/experiment/html/curatedMetagenomicData.html)
+is a large collection of curated human microbiome data sets, provided as
+`(Tree)SummarizedExperiment` objects [@Pasolli2017]. The resource
+provides curated human microbiome data including gene families, marker
+abundance, marker presence, pathway abundance, pathway coverage, and
+relative abundance for samples from different body sites. See the
+package homepage for more details on data availability and access.
 
 As one example, let us retrieve the Vatanen (2016) [@Vatanen2016] data
 set. This is a larger collection with a bit longer download time.
-
 
 ```{r, message=FALSE, eval=FALSE}
 library(curatedMetagenomicData)
@@ -751,7 +751,13 @@ tse <- curatedMetagenomicData("Vatanen*", dryrun = FALSE, counts = TRUE)
 
 
 
+### Other data sources
 
+The current collections provide access to vast microbiome data
+resources. The output has to be converted into TreeSE/MAE separately.
+
+- [MGnifyR](https://github.com/beadyallen/MGnifyR) provides access to [EBI/MGnify](https://www.ebi.ac.uk/metagenomics/) 
+- [qiitr](https://github.com/cran/qiitr) provides access to [QIITA](https://qiita.com/about) 
 
 
 
