--- a/06_packages.Rmd
+++ b/06_packages.Rmd
@@ -9,67 +9,85 @@ chapterPreamble()
 
 ## Package installation
 
-Several R packages provide methods for the analysis and manipulation
-of `SummarizedExperiment` and related data containers. One of these is
-`mia`. The installation for this and other packages has the following
+You can install all the packages that are required to run every example in the book via the following command:
+
+```{r eval=FALSE, message=FALSE}
+source("https://github.com/microbiome/OMA/blob/master/install_packages.R")
+```
+
+
+### Installing specific packages {#packages}
+
+Methods for the analysis and manipulation of
+`(Tree)SummarizedExperiment` and `MultiAssayExperiment` data
+containers are available through a number of R packages. One of these
+is `mia`. This and other packages can be installed with the following
 procedure.
 
-Stable Bioconductor release version can be installed with:
+
+**Bioconductor release version** is the most stable and tested version
+but may miss some of the latest methods and updates. It can be
+installed with:
 
 ```{r eval=FALSE, message=FALSE}
 BiocManager::install("microbiome/mia")
 ```
 
-Biocondcuctor development version requires the installation of the
-latest R beta version, and this is primarily recommended for those who
-already have solid experience with R/Bioconductor and need access to
-the latest experimental updates.
+**Bioconductor development version** requires the installation of the
+latest R beta version. This is primarily recommended for those who
+already have experience with R/Bioconductor and need access to the
+latest updates.
 
 ```{r eval=FALSE, message=FALSE}
 BiocManager::install("microbiome/mia", version="devel")
 ```
 
-The bleeding edge (and potentially unstable) development version lives
-in Github:
+**Github development version** provides access to the latest but
+potentially unstable features. This is useful when you want access to
+all available tools.
 
 ```{r eval=FALSE, message=FALSE}
 devtools::install_github("microbiome/mia")
 ```
 
 
+## Package ecosystem 
 
-## Some available packages
-
-Some of the R packages supporting the _TreeSummarizedExperiment_ framework include:
+Some of the R packages supporting the _(Tree)SummarizedExperiment_ or
+_MultiAssayExperiment_ framework include the following. If you know
+more tips on such packages, data sources, or other resources, kindly
+[let us know](https://microbiome.github.io) through the issues, pull
+requests, or online channels.
 
 ### mia family of methods
 
-- [mia](microbiome.github.io/mia) : generic microbiome analysis tools   
-- [miaViz](microbiome.github.io/miaViz) : microbiome data visualization
-- [miaSim](microbiome.github.io/miaSim) : microbiome data simulation
-- [miaTime](microbiome.github.io/miaTime) : microbiome time series analysis
-
-### Tree-based methods {sub-tree-methods}
-
-- [philr](http://bioconductor.org/packages/devel/bioc/html/philr.html) (external, @Silverman2017)
 - [mia](microbiome.github.io/mia): Microbiome analysis tools [@R-mia]
 - [miaViz](microbiome.github.io/miaViz): Microbiome analysis specific visualization [@Ernst2022]
 - [miaSim](microbiome.github.io/miaSim): Microbiome data simulations [@Simsek2021]
 - [miaTime](microbiome.github.io/miaTime): Microbiome time series analysis [@Lahti2021]
 
-### Differential abundance {sub-diff-abund}
 
-- [benchdamic](https://bioconductor.org/packages/release/bioc/vignettes/benchdamic/inst/doc/intro.html) for benchmarking differential abundance methods
+### Tree-based methods {#sub-tree-methods}
+
+- [philr](http://bioconductor.org/packages/devel/bioc/html/philr.html) (@Silverman2017)
+
+
+### Differential abundance {#sub-diff-abund}
+
 - [ANCOMBC](https://bioconductor.org/packages/devel/bioc/html/ANCOMBC.html) for differential abundance analysis
+- [benchdamic](https://bioconductor.org/packages/release/bioc/vignettes/benchdamic/inst/doc/intro.html) for benchmarking differential abundance methods
 
-### Manipulation {sub-manipulation}
+### Manipulation {#sub-manipulation}
 
 - [MicrobiotaProcess](https://bioconductor.org/packages/release/bioc/html/MicrobiotaProcess.html) for analyzing microbiome and other ecological data within the tidy framework
 
-### Data
 
-- [curatedMetagenomicData](https://bioconductor.org/packages/release/data/experiment/html/curatedMetagenomicData.html) a large collection of curated human microbiome data sets
-- [microbiomeDataSets](https://bioconductor.org/packages/release/data/experiment/html/microbiomeDataSets.html) microbiome demo data sets
+## Data ecosystem
+
+Section \@ref(example-data) links to various open microbiome data resources that support this framework.
+
+
+
 
 ## Session Info {-}
 
