updated training sections

--- a/97_extra_materials.Rmd
+++ b/97_extra_materials.Rmd
@@ -1,4 +1,12 @@
+# (PART) Appendix {-}
+
 # Extra material {#extras}
+
+```{r setup, echo=FALSE, results="asis"}
+library(rebook)
+chapterPreamble()
+```
+
 
 ## PERMANOVA comparison
 
