--- a/80_training.Rmd
+++ b/80_training.Rmd
@@ -7,8 +7,7 @@ library(rebook)
 chapterPreamble()
 ```
 
-The page provides practical information for R/Bioconductor training
-activities.
+The page provides practical information to support training and self-study.
 
 
 ## Checklist {#checklist}
@@ -62,7 +61,7 @@ We encourage to familiarize with the material and test examples in advance.
 ## Support and resources
 
 For online support on installation and other matters, join us at
-[Gitter](https://gitter.im/microbiome/miaverse?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge&utm_content=badge)
+[Gitter](https://gitter.im/microbiome/miaverse?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge&utm_content=badge).
 
 You are also welcome to connect through various channels with our
 broader [developer and user community](https://microbiome.github.io).
