--- a/97_extra_materials.Rmd
+++ b/97_extra_materials.Rmd
@@ -248,7 +248,7 @@ if (!require(plotly)){
 }
 ```
 
-```{r, setup, warning=FALSE, message=FALSE}
+```{r setup2, warning=FALSE, message=FALSE}
 library(knitr)
 library(rgl)
 knitr::knit_hooks$set(webgl = hook_webgl)
