--- a/80_training.Rmd
+++ b/80_training.Rmd
@@ -38,7 +38,7 @@ components to install include:
   from Section \@ref(exercises) already before training. **You can run
   the workflows by simply copy-pasting examples.** You can then test
   further examples from this tutorial, modifying and applying these
-  techniques to your own data.
+  techniques to your own data. Plain source code for the individual chapters of this book are available via [Github](https://github.com/microbiome/OMA/tree/master/R)
 
 
 
