Correct typos and improve style

--- a/12_quality_control.Rmd
+++ b/12_quality_control.Rmd
@@ -29,13 +29,13 @@ Abundance visualization is an important data exploration
 approach. `miaViz` offers the function `plotAbundanceDensity` to plot
 the most abundant taxa with several options.
 
-In the following few demonstrations are shown, using the [@Lahti2014]
+Next, a few demonstrations are shown, using the [@Lahti2014]
 dataset. A Jitter plot based on relative abundance data, similar to
 the one presented at [@Salosensaari2021] supplementary figure 1, could
 be visualized as follows:
 
 ```{r, warning=FALSE, message=FALSE}
-# Loading example data
+# Load example data
 library(miaTime)
 library(miaViz)
 data(hitchip1006)
@@ -44,7 +44,6 @@ tse <- hitchip1006
 # Add relative abundances
 tse <- transformCounts(tse, MARGIN = "samples", method = "relabundance")
 
-library(miaViz)
 # Use argument names
 # assay_name / assay_name / assay_name
 # depending on the mia package version
@@ -73,8 +72,7 @@ be given as sample size (N) or percentage (unit interval).
 
 Investigating prevalence allows you either to focus on changes which
 pertain to the majority of the samples, or identify rare microbes,
-which may be _conditionally abundant_ in a small number of samples,
-however.
+which may be _conditionally abundant_ in a small number of samples.
 
 The population prevalence (frequency) at a 1% relative abundance
 threshold (`detection = 1/100` and `as_relative = TRUE`), can look
@@ -85,7 +83,7 @@ head(getPrevalence(tse, detection = 1/100, sort = TRUE, as_relative = TRUE))
 ```
 
 The function arguments `detection` and `as_relative` can also be used
-to access, how many samples do pass a threshold for raw counts. Here
+to access, how many samples do pass a threshold for raw counts. Here,
 the population prevalence (frequency) at the absolute abundance
 threshold (`as_relative = FALSE`) at read count 1 (`detection = 1`) is
 accessed.
@@ -158,9 +156,9 @@ Related functions are available for the analysis of rare taxa
 
 ### Plotting prevalence
 
-To plot the prevalence, add the prevalence of each taxa to the
+To plot the prevalence, add the prevalence of each taxon to
 `rowData`. Here, we are analysing the Phylum level abundances, which
-are stored in the altExp slot.
+are stored in the `altExp` slot.
 
 ```{r}
 rowData(altExp(tse,"Phylum"))$prevalence <- 
@@ -168,7 +166,7 @@ rowData(altExp(tse,"Phylum"))$prevalence <-
                   assay_name = "counts", as_relative = TRUE)
 ```
 
-The prevalences can be then plotted via the plotting functions from
+The prevalences can then be plotted using the plotting functions from
 the `scater` package.
  
 ```{r, message=FALSE, warning=FALSE}
@@ -176,7 +174,7 @@ library(scater)
 plotRowData(altExp(tse,"Phylum"), "prevalence", colour_by = "Phylum")
 ```
 
-The prevalence can be also visualized on the taxonomic tree with the
+The prevalence can also be visualized on the taxonomic tree with the
 `miaViz` package.
 
 ```{r}
@@ -201,7 +199,7 @@ x <- unsplitByRanks(tse, ranks = taxonomyRanks(tse)[1:6])
 x <- addTaxonomyTree(x)
 ```
  
-After some preparation the data is assembled and can be plotted via 
+After some preparation, the data is assembled and can be plotted with
 `plotRowTree`.
 
 ```{r plot-prev-prev, message=FALSE, fig.cap="Prevalence of top phyla as judged by prevalence"}
@@ -247,9 +245,8 @@ rowData(tse)[top_features, taxonomyRanks(tse)]
 
 ### Library size / read count  
 
-The total counts/sample can be calculated using the
-`perCellQCMetrics`/`addPerCellQC` from the `scater` package. The former one 
-just calculates the values, whereas the latter one directly adds them to the
+The total counts/sample can be calculated using `perCellQCMetrics`/`addPerCellQC` from the `scater` package. The former one
+just calculates the values, whereas the latter one directly adds them to
 `colData`.
 
 ```{r lib-size}
@@ -295,7 +292,7 @@ library(patchwork)
 p1 + p2
 ```
 
-Library sizes - and other variables from `colData` - can be also
+Library sizes other variables from `colData` can be
 visualized by using specified function called `plotColData`.
 
 ```{r plot-viz-lib-size-2, fig.width=8, fig.height=4, fig.cap="Library sizes per sample."}
