polish multi-omics text

--- a/24_clustering.Rmd
+++ b/24_clustering.Rmd
@@ -17,11 +17,11 @@ features/samples that share pattern.  For example, with clustering, we
 can find group of samples that share similar community
 composition. There are multiple clustering algorithms available.
 
-## Hiearchical clustering
+## Hierarchical clustering
 
-Hiearchical clustering is a clustering method that aims to find
-hiearchy between samples/features. There are to approaches:
-agglomerative ("bottom-up") and divisive ("top-down").
+Hiearchical clustering aims to find hiearchy between
+samples/features. There are to approaches: agglomerative ("bottom-up")
+and divisive ("top-down").
 
 In agglomerative approach, each observation is first unique cluster.
 Algorithm continues by agglomerating similar clusters. Divisive
