--- a/23_multi-assay_analyses.Rmd
+++ b/23_multi-assay_analyses.Rmd
@@ -9,21 +9,21 @@ chapterPreamble()
 library(mia)
 ```
 
-Multi-omics means that we integrate data from multiple sources. For
+Multi-omics means data integration from multiple sources. For
 example, we can integrate microbial abundances in the gut with
 biomolecular profiling data from blood samples. This kind of
-integrative multi-omic approaches can support the analysis of
+integrative multi-omic approach can support the analysis of
 microbiome dysbiosis and facilitate the discovery of novel biomarkers
 for health and disease.
 
-With cross-correlation analysis, we can analyze how strongly and how
-differently variables are associated between each other. For instance,
-we can analyze if higher presence of a specific taxon equals to higher
-levels of a biomolecule.
+With cross-correlation analysis, we can analyze how strongly and
+differently, variables are associated with each other. For instance,
+we can investigate whether a higher presence of a specific taxon 
+corresponds to higher levels of a biomolecule.
 
-The data containers that the _miaverse_ utilizes are scalable and they
-can contain different types of data in a same container. Because of
-that, the _miaverse_ is well-suitable for multi-assay microbiome data
+The data containers that the _miaverse_ utilizes are scalable, and they
+can contain different types of data in a same container. As a result,
+the _miaverse_ is well-suited to multi-assay microbiome data
 which incorporates different types of complementary data sources in a
 single reproducible workflow.
 
@@ -32,29 +32,27 @@ or both experiments can be stored side-by-side in MAE data container
 (see the sections \@ref(alt-exp) and \@ref(mae) to learn more about
 altExp and MAE objects, respectively).
 
-Different experiments are first imported into SE or TreeSE data
-container similarly to the case when only one experiment is
-present. After that different experiments are combined into the same
-data container. Result is one TreeSE object with alternative
-experiment in altExp slot, or MAE object with multiple experiment in
-its experiment slot.
+Multiple experiments are initially imported into the SE or TreeSE data 
+containers, similar to when a single experiment is present. After that 
+different experiments are combined into the same data container. 
+The result is one TreeSE object with alternative experiment in altExp slot,
+or MAE object with multiple experiment in its experiment slot.
 
-As an example data, we use data from following publication: Hintikka L
+As an example data, we use data from the following publication: Hintikka L
 _et al._ (2021) Xylo-oligosaccharides in prevention of hepatic
 steatosis and adipose tissue inflammation: associating taxonomic and
-metabolomic patterns in fecal microbiotas with biclustering
+metabolomic patterns in fecal microbiota with biclustering
 [@Hintikka2021].
 
-In this article, mice were fed with high-fat and low-fat diets with or
-without prebiotics.  The purpose of this was to study if prebiotics
-would reduce the negative impacts of high-fat diet.
+In this study, mice were fed with high-fat and low-fat diets with or
+without prebiotics.  The purpose of this was to study whether prebiotics
+reduce negative impacts of a high-fat diet.
 
 This example data can be loaded from microbiomeDataSets. The data is
 already in MAE format. It includes three different experiments:
 microbial abundance data, metabolite concentrations, and data about
-different biomarkers. Help for importing data into SE object you can
-find from
-[here](https://microbiome.github.io/OMA/containers.html#loading-experimental-microbiome-data).
+different biomarkers. [Here](https://microbiome.github.io/OMA/containers.html#loading-experimental-microbiome-data) 
+you can find help for importing data into a SE object.
 
 ```{r cross-correlation1}
 # Load the data
@@ -89,10 +87,10 @@ mae[[3]]
 
 ## Cross-correlation Analysis
 
-Next we can do the cross-correlation analysis.  Here we analyse if
-individual bacteria genera correlates with concentrations of
+Next we can do the cross-correlation analysis.  Here, we analyse whether
+individual bacteria genera correlate with concentrations of
 individual metabolites. This helps as to answer the question: "If this
-bacteria is present, is this metabolite's concentration then low or
+bacterium is present, is the concentration of this metabolite low or
 high"?
 
 ```{r cross-correlation5}
@@ -148,7 +146,7 @@ Multi-Omics Factor Analysis [@Argelaguet2018] (MOFA) is an
 unsupervised method for integrating multi-omic data sets in a
 downstream analysis.  It could be seen as a generalization of
 principal component analysis. Yet, with the ability to infer a latent
-(low-dimensional) representation, shared among the mutliple (-omics)
+(low-dimensional) representation, shared among the multiple (-omics)
 data sets in hand.
 
 We use the R [MOFA2](https://biofam.github.io/MOFA2/index.html)
@@ -175,8 +173,7 @@ if(!require(reticulate)){
 
 The `mae` object could be used straight to create the MOFA model. Yet,
 we transform our assays since the model assumes normality per
-default. Other distributions that can be used, include Poisson or
-Bernoulli.
+default. We can also use Poisson or Bernoulli distributions among others.
 
 ```{r, message=FALSE, warning=FALSE}
 library(MOFA2)
@@ -257,7 +254,7 @@ wrap_plots(
                     theme = theme(plot.title = element_text(hjust = 0.5)))
 ```
 
-The top weights for each assay using all 5 factors:
+The top weights for each assay using all five factors:
 
 ```{r, warning=FALSE, message=FALSE, fig.height=10, fig.width=10}
 plots <- lapply(c("microbiota", "metabolites","biomarkers"), function(name) {
@@ -270,7 +267,7 @@ plots <- lapply(c("microbiota", "metabolites","biomarkers"), function(name) {
 wrap_plots(plots, nrow = 3) & theme(text = element_text(size = 8))
 ```
 
-More tutorials and examples of using the package are found at: [link](https://biofam.github.io/MOFA2/tutorials.html)
+More tutorials and examples of using the package are found at [link](https://biofam.github.io/MOFA2/tutorials.html)
 
 
 
