Correct typos and impove style in 23_multi-assay_analyses (#256)
* Correct typos and improve style

* Correct typos and improve style

* Correct typos and improve style

---------

Co-authored-by: artur_sannikov <artur.sannikov96@gmail.com>

--- a/23_multi-assay_analyses.Rmd
+++ b/23_multi-assay_analyses.Rmd
@@ -41,10 +41,22 @@ container. The result is one TreeSE object with alternative experiment in
 altExp slot, or MAE object with multiple experiment in its experiment
 slot, for instance.
 
-As an example data, we use data from following publication: Hintikka L
+As an example data, we use data from the following publication: Hintikka L
 _et al._ (2021) Xylo-oligosaccharides in prevention of hepatic
 steatosis and adipose tissue inflammation: associating taxonomic and
 metabolomic patterns in fecal microbiota with biclustering
+
+[@Hintikka2021].
+
+In this study, mice were fed with high-fat and low-fat diets with or
+without prebiotics.  The purpose of this was to study whether prebiotics
+reduce negative impacts of a high-fat diet.
+
+This example data can be loaded from microbiomeDataSets. The data is
+already in MAE format. It includes three different experiments:
+microbial abundance data, metabolite concentrations, and data about
+different biomarkers.
+=======
 [@Hintikka2021]. In this article, mice were fed with high-fat and
 low-fat diets with or without prebiotics.  The purpose of this was to
 study if prebiotics would reduce the negative impact of high-fat diet.
@@ -53,9 +65,8 @@ This example data is readily available in the MultiAssayExperiment
 format. It includes three different experiments: microbial abundance
 data, metabolite concentrations, and data about different
 biomarkers. If you like to construct the same data object from the
-original files instead, Help for importing data into SE object you can
-find from
-[here](https://microbiome.github.io/OMA/containers.html#loading-experimental-microbiome-data).
+original files instead, [Here](https://microbiome.github.io/OMA/containers.html#loading-experimental-microbiome-data) 
+you can find help for importing data into a SE object.
 
 ```{r cross-correlation1}
 # Load the data
@@ -89,6 +100,7 @@ mae[[3]]
 ```
 
 ## Cross-correlation Analysis
+
 
 Next we can do the cross-correlation analysis. Let us analyse if
 individual bacteria genera correlates with concentrations of
@@ -149,7 +161,7 @@ Multi-Omics Factor Analysis [@Argelaguet2018] (MOFA) is an
 unsupervised method for integrating multi-omic data sets in a
 downstream analysis.  It could be seen as a generalization of
 principal component analysis. Yet, with the ability to infer a latent
-(low-dimensional) representation, shared among the mutliple (-omics)
+(low-dimensional) representation, shared among the multiple (-omics)
 data sets in hand.
 
 We use the R [MOFA2](https://biofam.github.io/MOFA2/index.html)
@@ -176,8 +188,7 @@ if(!require(reticulate)){
 
 The `mae` object could be used straight to create the MOFA model. Yet,
 we transform our assays since the model assumes normality per
-default. Other distributions that can be used, include Poisson or
-Bernoulli.
+default. We can also use Poisson or Bernoulli distributions among others.
 
 ```{r, message=FALSE, warning=FALSE}
 library(MOFA2)
@@ -258,7 +269,7 @@ wrap_plots(
                     theme = theme(plot.title = element_text(hjust = 0.5)))
 ```
 
-The top weights for each assay using all 5 factors:
+The top weights for each assay using all five factors:
 
 ```{r, warning=FALSE, message=FALSE, fig.height=10, fig.width=10}
 plots <- lapply(c("microbiota", "metabolites","biomarkers"), function(name) {
@@ -271,7 +282,7 @@ plots <- lapply(c("microbiota", "metabolites","biomarkers"), function(name) {
 wrap_plots(plots, nrow = 3) & theme(text = element_text(size = 8))
 ```
 
-More tutorials and examples of using the package are found at: [link](https://biofam.github.io/MOFA2/tutorials.html)
+More tutorials and examples of using the package are found at [link](https://biofam.github.io/MOFA2/tutorials.html)
 
 
 
